--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+cramjam==2.7.0
 defusedxml==0.7.1
 et-xmlfile==1.1.0
+fastparquet==2023.7.0
+fsspec==2023.6.0
 numpy==1.25.2
 odfpy==1.4.1
 openpyxl==3.1.2
+packaging==23.1
 pandas==2.0.3
+parquet==1.3.1
+ply==3.11
 python-dateutil==2.8.2
 pytz==2023.3
 pyxlsb==1.0.10
 six==1.16.0
+thriftpy2==0.4.16
 tzdata==2023.3
 xlrd==2.0.1
 XlsxWriter==3.1.2
